# ZIVO-AI

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  eslint.config.mjs  mcp_servers.json  next.config.ts  package-lock.json  package.json  proxy.ts  pyproject.toml  requirements.txt  route.ts  tsconfig.json  vitest.config.ts
.github/: copilot-instructions.md
__tests__/: build-sse-event-format.test.ts
agents/: README.md  agent-base.ts  analytics-agent.ts  architect-agent.ts  backend-agent.ts  base-agent.ts  code-fixer.ts  code-generator-agent.ts  code-review-agent.ts  coordinator.ts  database-agent.ts  debug-agent.ts  devops-agent.ts  image-generation-agent.ts  ml-agent.ts  monitoring-agent.ts  orchestrator-v2.ts  orchestrator-v3.ts  orchestrator-v4.ts  orchestrator.ts  performance-agent.ts  planner.ts  platform-agent.ts  qa-agent.ts  research-agent.ts  search-agent.ts  security-agent.ts  tools.ts  ui-agent.ts  validator.ts  voice-agent.ts  web-scraper-agent.ts
app/: GlobalProviders.tsx  error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
components/: AIChatSidebar.tsx  AICodeEditor.tsx  AIProjectPlanner.tsx  AccessibilityScanner.tsx  AgentOrchestrator.tsx  AppPreview.tsx  AppSidebar.tsx  AppStorePublisher.tsx  ArchVisualizer.tsx  BlueprintPanel.tsx  BrandKitViewer.tsx  BuildFixPanel.tsx  BuildOutputPanel.tsx  BuildPipelineProgress.tsx  BuildProgressIndicator.tsx  ChatbotBuilder.tsx  CodePlayground.tsx  CodeReviewPanel.tsx  CollabPanel.tsx  CommandPalette.tsx  ConnectorsPanel.tsx  ConsolePanel.tsx  DataExplorer.tsx  (+54 more)
(+904 files in other folders)
