[project]
name = "zivo-ai"
version = "0.1.0"
description = "ZIVO-AI — A high-performance agentic assistant powered by the OpenAI Agents SDK"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.24.0",
    "openai-agents>=0.0.14",
    "streamlit>=1.54.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
